[package]
name = "bil_row_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.14"
simple_logger = "4.0.0"
rayon = "1.9.0"
async-channel = "2.2.0"
